fix: node bounds & alignment

--- a/client/src/graph.scss
+++ b/client/src/graph.scss
@@ -45,16 +45,29 @@
     }
 
 
-    .poly-text{
+    .node-text{
       text-align: center;
       padding: 5px 10px;
       text-overflow: ellipsis;
       word-wrap: break-word;
 
-      height: 62px;
       display: flex;
       justify-content: center;
       align-items: center;
+
+      &.poly{
+        height: 62px;
+      }
+
+      &.rect{
+        height: 32px;
+      }
+
+      &.diamond{
+        width: 96px;
+        height: 96px;
+        padding: 0;
+      }
 
       span{
         display: inline-block;
